--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>Quizz</title>
-		<link rel="stylesheet" type="text/css" href="css/Quizz-css.css"/>
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<link rel="icon" type="image/png" href="img/icon.png"/>
 		<script type="text/javascript" src="fonctionJS.js"></script>
 	</head>
