--- a/inscription.html
+++ b/inscription.html
@@ -3,8 +3,8 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>S'INSCRIRE</title>
-		<link rel="stylesheet" type="text/css" href="css/Quizz-css.css"/>
+		<title>S'inscrire</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<link rel="icon" type="image/png" href="img/icon.png"/>
 		<script type="text/javascript" src="fonctionJS.js"></script>
 	</head>
